--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -538,7 +538,7 @@ There are two types of relics:
 \end{itemize}
 
 \subsection{Hot relics}
-Hot relics are still relativistic today, so their rest mass is $m_i \ll T_0 = \SI{2.4e-4}{\eV}$. An example would be massless neutrinos.
+We consider now only those relics that are still relativistic today, with rest mass $m_i \ll T_0 = \SI{2.4e-4}{\eV}$. An example would be massless neutrinos.
 
 The solution of the Boltzmann equation is
 	\begin{align*}
