--- a/tex/config/commands.tex
+++ b/tex/config/commands.tex
@@ -2,6 +2,7 @@
 \DeclareSIUnit\year{yr}
 \newcommand{\sol}{\odot}
 \DeclareSIUnit\solarmass{M_\sol}
+\DeclareSIUnit\lightyear{ly}
 
 \newcommand{\describe}[2]{
 	\begin{description}
