--- a/tex/main/01-introduction.tex
+++ b/tex/main/01-introduction.tex
@@ -2,21 +2,21 @@
 \setlist{nosep}
 
 \section{Extragalactic sky}
-When looking in a clear night into the sky you can see a whitish band where a lot of stars are located (see figure \ref{fig:milkyway}). 
+When looking in a clear night into the sky you can see a whitish band where a lot of stars are located (see \cref{fig:milkyway}). 
 \begin{marginfigure}
 	\centering
 		\includegraphics[width=\textwidth]{img/ch-01/milkyway.png}
 		\caption{An image of the night sky which shows the milky way.}
 		\label{fig:milkyway}
 \end{marginfigure}
-This band is the milky way the galaxy, to which our solar system belongs. If we were able to have a look onto our galaxy from the outside, we would see something like in figure \ref{fig:milkywayoutside}. We see that the milky way has a galactic center which has the form of a bar, and spiral arms which come from the center. Our solar system is situated quite far away from the galactic center in one of the arms. 
+This band is the Milky Way, the galaxy to which our Solar System belongs. If we were able to have a look onto our galaxy from the outside, we would see something like in \cref{fig:milkywayoutside}. We see that the Milky Way has a galactic centre which has the form of a bar, and spiral arms which come from the centre. Our Solar System is situated quite far away from the galactic centre in one of the arms. 
 \begin{marginfigure}
 	\centering
 		\includegraphics[width=\textwidth]{img/ch-01/milkywayfromoutside.png}
 		\caption{An illustration of the milky way, showing it from an outside perspective.}
 		\label{fig:milkywayoutside}
 \end{marginfigure}
-But our galaxy is not the only one in our Universe, and there are different types of galaxies. The milky way is a spiral galaxy. In figure \ref{fig:spiralM101} an other spiral galaxy the M101 is illustrated. A subgroup of spiral galaxies are barred spiral galaxies (see figure \ref{fig:barredspiralNGC1300}), which are characterized by the barred shape of their center. Figure \ref{fig:ellipitcalNGC1332} shows an elliptical galaxy and figure \ref{fig:dwarfirregularNGC1427A} is an example of an irregular galaxy, the one shown in the figure is an irregular dwarf galaxy. If a spiral or an irregular galaxy has a really bright galactic center, it is called a Seyfert galaxy (see figure \ref{fig:seyfertNGC1097}). They are a subgroup of active galactic nuclei and the brightness of the galactic center is probably caused by a super massive black hole in the center of the galaxy. 
+But our galaxy is not the only one in our universe, and there are different types of galaxies. The Milky Way is a spiral galaxy. In \cref{fig:spiralM101} another spiral galaxy, M101, is illustrated. A subgroup of spiral galaxies are barred spiral galaxies (see \cref{fig:barredspiralNGC1300}), which are characterized by the barred shape of their centre. \Cref{fig:ellipitcalNGC1332} shows an elliptical galaxy and \cref{fig:dwarfirregularNGC1427A} is an example of an irregular galaxy, the one shown in the figure is an irregular dwarf galaxy. If a spiral or an irregular galaxy has a really bright galactic centre, it is called a Seyfert galaxy (see \cref{fig:seyfertNGC1097}). They are a subgroup of active galactic nuclei and the brightness of the galactic centre is probably caused by a super massive black hole in the centre of the galaxy. 
 \begin{figure}
 	\centering
 		\begin{subfigure}[b]{0.49\textwidth}
@@ -46,7 +46,7 @@ But our galaxy is not the only one in our Universe, and there are different type
 		\end{subfigure}
 \caption{The images show different types of galaxies: A spiral galaxy (a), a barred spiral galaxy (b), an elliptical galaxy (c), an irregular dwarf galaxy (d) and a Seyfert galaxy (e).}
 \end{figure}
-Galaxies can gather in groups (see figure \ref{fig:galaxygroupHCG16}) or clusters (see figure \ref{fig:galaxyclusterA383}). Galaxy groups contain up to 50 galaxies and, they are the smallest collection of galaxies. Galaxy clusters consist of hundreds to thousands of galaxies. They are the largest gravitationally bound structures in the universe and their mass is around $10^{14}$ to $10^{15}$ solar masses.
+Galaxies can gather in groups (see \cref{fig:galaxygroupHCG16}) or clusters (see \cref{fig:galaxyclusterA383}). Galaxy groups contain up to 50 galaxies, and they are the smallest collection of galaxies. Galaxy clusters consist of hundreds to thousands of galaxies. They are the largest gravitationally bound structures in the universe and their mass is around $10^{14}$ to $10^{15}$ solar masses.
 \begin{figure}
 	\centering
 		\begin{subfigure}[b]{0.49\textwidth}
@@ -63,17 +63,17 @@ Galaxies can gather in groups (see figure \ref{fig:galaxygroupHCG16}) or cluster
 \end{figure}
 
 \section{Cosmological model}
-The standard cosmological model assumes that the universe was initially created in a Big Bang and underwent different epochs until it became the way it is now. Figure \ref{fig:standardcosmologicalmodel} shows the history of the universe, when assuming this model. 
+The standard cosmological model assumes that the universe was initially created in a Big Bang and underwent different epochs until it became the way it is now. \Cref{fig:standardcosmologicalmodel} shows the history of the universe, when assuming this model. 
 \begin{figure}[H]
 	\centering
 		\includegraphics[width=0.7\textwidth]{img/ch-01/standardcosmologicalmodel.png}
 		\caption{The standard cosmological model describes the evolution of our Universe starting with the Big Bang.}
 		\label{fig:standardcosmologicalmodel}
 \end{figure}
-From this model we also find that the universe nowadays consist of about 4\% ordinary matter, 20\% dark matter and 76\% dark energy. We will look at this closer in chapter 2. 
+From this model we also find that the universe nowadays consist of about \SI{4}{\percent} ordinary matter, \SI{20}{\percent} dark matter, and \SI{76}{\percent} dark energy. We will look at this closer in \cref{ch:cosmological-background}. 
 
 \section{Instruments}
-For experimental results, large telescopes are needed. In order for them to be useful, they have to be placed in places with the right conditions. Therefore, a lot of the telescopes are in space, especially if one wants to observe in the ultraviolet. Figure \ref{fig:electromagneticspectrum} shows the electromagnetic spectrum and at which wavelengths it is necessary to do the observations in space. Radio waves can be observed from earth, for those observation we use array telescopes. 
+For experimental results, large telescopes are needed. In order for them to be useful, they have to be placed in places with the right conditions. Therefore, a lot of the telescopes are in space, especially if one wants to observe in the ultraviolet. \Cref{fig:electromagneticspectrum} shows the electromagnetic spectrum and at which wavelengths it is necessary to do the observations in space. Radio waves can be observed from earth, for those observation we use array telescopes. 
 \begin{figure}[H]
 	\centering
 		\includegraphics[width=1.0\textwidth]{img/ch-01/electromagneticspectrum.png}
@@ -82,35 +82,47 @@ For experimental results, large telescopes are needed. In order for them to be u
 \end{figure}
 
 \section{Basic concepts}
-Astrophysical units are uniquely used in Astrophysics. In order to talk of the mass of different stars, galaxies and more we use the unit of solar masses, where $1 M_{\odot} = 1.99 \cdot 10^{30}$ kg corresponds to the mass of the sun. When talking about time usually years instead of seconds are used, where $1$ yr $ = 3.16 \cdot 10^7$ . Finally we come to the unit of distance. The most known distance scale used in Astrophysics is probably light-years, which is the distance light travels in one year. An other unit for distances which we will use mostly is parsec, $1$ pc $ = 3.09 \cdot 10^{16}$ m $ = 3.26$ ly. Figure \ref{fig:parsec} shows the meaning of a parsec. It is the correlation between the distance between earth and sun and the respective object (a star in the figure) to which we want to know the distance. 1 parsec corresponds to the angle of 1" at the object. 
+
+\newglossaryentry{solar mass}{name={\si{\solarmass}},sort={solar mass},description={The mass of the sun}}
+
+\glsxtrnewsymbol[description={mass of the sun}]{solarmass}{\si{\solarmass}}
+\glsxtrnewsymbol[description={year}]{year}{\si{\year}}
+\glsxtrnewsymbol[description={light-year}]{lightyear}{\si{\lightyear}}
+\glsxtrnewsymbol[description={parsec}]{parsec}{\si{\parsec}}
+
+Astrophysical units are uniquely used in astrophysics. In order to talk of the mass of different stars, galaxies and more we use the unit of a solar mass (\gls{solarmass}), defined as $\SI{1}{\solarmass} = \SI{1.99e30}{\kilo\gram}$. When talking about time, usually years (\gls{year}) instead of seconds are used, where $\SI{1}{\year} \approx \SI{3.16e7}{\second}$. Finally we come to the unit of distance. The most known distance scale used in astrophysics is probably light-years (\gls{lightyear}), which is the distance light travels in one year. Another unit for distances which we will use mostly is parsec (\gls{parsec}), where $\SI{1}{\parsec} \approx \SI{3.09e16}{\meter} \approx \SI{3.26}{\lightyear}$. \Cref{fig:parsec} shows the meaning of a parsec. It is the correlation between the distance between earth and sun and the respective object (a star in the figure) to which we want to know the distance. 1 parsec corresponds to the angle of \SI{1}{\arcsecond} at the object.
 \begin{marginfigure}
 	\centering
 		\includegraphics[width=0.5\textwidth]{img/ch-01/parsec.png}
-		\caption{One parsec corresponds to the needed distance between sun and object which results into an angle of 1", if one looks at the triangle created by the sun, the object and the earth, which rotates around the sun.}
+		\caption{One parsec corresponds to the needed distance between sun and object which results into an angle of \SI{1}{\arcsecond}, if one looks at the triangle created by the sun, the object and the earth, which rotates around the sun.}
 		\label{fig:parsec}
 \end{marginfigure}
-In order to get a feeling for scales, some mass, distance and time scales are listed in \cref{tab:units}
+In order to get a feeling for scales, some mass, distance and time scales are listed in \cref{tab:units}.
 
 \begin{table*}
-\label{table:scales}
-\centering
-\begin{tabular}{lll}
-\toprule
-Mass scales & Distance scales & Time scales\\
-\midrule
-Dwarf galaxies $\approx 10^9$ $M_\odot$ & Galaxy size $\approx 10^4$ pc &  Universe age $\approx 14\cdot 10^9$ yr\\
-Galaxies $\approx 10^{12}$ $M_\odot$ & Galaxy cluster size $\approx 10^6$ pc & Sun age $\approx 4.6\cdot 10^9$ yr\\
-Galaxy groups $\approx 10^{13}$ $M_\odot$ & Homogeneity $\approx 10^8$ pc & \\
-Galaxy clusters $\approx 10^{15}$ $M_\odot$ & Observable Universe $\approx 10^9$ pc & \\
-\bottomrule
-\end{tabular}
-\caption{Astrophysical scales.}
-\label{tab:units}
+	\centering
+	\begin{tabular}{lll}
+		\toprule
+		Mass scales & Distance scales & Time scales\\
+		\midrule
+		Dwarf galaxies $\approx \SI{e9}{\solarmass}$ & Galaxy size $\approx \SI{e4}{\parsec}$&  Universe age $\approx \SI{14e9}{\year}$\\
+		Galaxies $\approx \SI{e12}{\solarmass}$ & Galaxy cluster size $\approx \SI{e6}{\parsec}$ & Sun age $\approx \SI{4.6e9}{\year}$\\
+		Galaxy groups $\approx \SI{e13}{\solarmass}$ & Homogeneity $\approx \SI{e8}{\parsec}$ & \\
+		Galaxy clusters $\approx \SI{e15}{\solarmass}$ & Observable Universe $\approx \SI{e9}{\parsec}$ & \\
+		\bottomrule
+	\end{tabular}
+	\caption{Astrophysical scales.}
+	\label{tab:units}
 \end{table*}
 
-To talk about stars and other bright objects in the universe we need a way to talk about the luminosity, flux and the magnitude of these objects. The intrinsic luminosity is defined as $L = \text{energy}/\text{time}$, whereas the flux at the observer is defined as the luminosity divided by the area, $F = L/4\pi r^2$, where $r$ is the distance between object and observer.
+\glsxtrnewsymbol[description={apparent magnitude}]{apparent-magnitude}{$m_X$}
+\glsxtrnewsymbol[description={absolute magnitude}]{absolute-magnitude}{$M_X$}
+\glsxtrnewsymbol[description={intrinsic luminosity}]{intrinsic-luminosity}{$L$}
+\glsxtrnewsymbol[description={flux}]{flux}{$F$}
 
-Usually, the flux is with respect to a specific waveband $X$, therefore we write $f_X$. An other possibility to say something about the brightness of the object is the magnitude, which is the most common way. There is the apparent magnitude $m_X$ which describes the brightness of the object seen by the observer (which means here on earth). In order to compare the brightness of different objects and to be able to say something about their properties such as mass, one needs the absolute magnitude $M_X$. The absolute magnitude is the magnitude one would see at a distance of \SI{10}{\parsec} to the object. The magnitudes are calculated as follows:
+To talk about stars and other bright objects in the universe, we need a way to talk about the luminosity, flux and the magnitude of these objects. The intrinsic luminosity \gls{intrinsic-luminosity} is defined as $L = \text{energy}/\text{time}$, whereas the flux \gls{flux} at the observer is defined as the luminosity divided by the area, $F = L/4\pi r^2$, where $r$ is the distance between object and observer.
+
+Usually, the flux is with respect to a specific waveband $X$, therefore we write $f_X$. An other possibility to say something about the brightness of the object is the magnitude, which is the most common way. There is the apparent magnitude \gls{apparent-magnitude}, which describes the brightness of the object seen by the observer (which means here on earth). In order to compare the brightness of different objects and to be able to say something about their properties such as mass, one needs the absolute magnitude \gls{absolute-magnitude}. The absolute magnitude is the magnitude one would see at a distance of \SI{10}{\parsec} to the object. The magnitudes are calculated as follows:
 \begin{align*}
 	m_X &= -2.5 \log(f_X/f_{X,0}),\\
 	M_X &= -2.5 \log(L_X) + C_X,
@@ -118,6 +130,6 @@ Usually, the flux is with respect to a specific waveband $X$, therefore we write
 where $f_{X,0}$ is the flux zero point and $C_X$ is the zero point. For the zero point, the star Vega is used, which has an apparent magnitude of $0$ mag.
 
 The relation between the apparent and the absolute magnitude can be used to find the distance $r$ to the object,
-\begin{equation}
+\begin{equation*}
 	m_X - M_X = 5\log(r/r_0).
-\end{equation}
+\end{equation*}
