--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -1,4 +1,5 @@
 \chapter{Cosmological Background}
+\label{ch:cosmological-background}
 
 \section{Cosmological Principle}
 The Cosmological principle states that the universe is homogeneous and isotropic on sufficiently large scales, larger than about \SI{100}{\mega\parsec}. This is a generalization of the Copernican principle, according to which there is no special place and no special direction in the universe.
